--- a/TestHero/ClientApp/src/Pages/login/login.css
+++ b/TestHero/ClientApp/src/Pages/login/login.css
@@ -1,11 +1,12 @@
 .login {
-  width: 100vw;
-  height: 100vh;
+  width: 120vw;
+  height: 120vh;
   background-color: #f0f2f5;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background-image: url("../../../public/assets/fondo.jpg"); */
+  background-image: url("../..//assets/fondo.jpg");
+  background-size: 120vw 120vh;
 }
 
 .loginWrapper {
@@ -77,6 +78,7 @@
 .texto {
   font-size: 25px;
   font-weight: bold;
+  color: #f0f2f5;
 }
 
 .imagen {
