--- a/TestHero/ClientApp/src/components/Sidebar.css
+++ b/TestHero/ClientApp/src/components/Sidebar.css
@@ -1,63 +1,70 @@
 /* The sidebar menu */
 .sidenav {
-    height: 100%;
-    /* Full-height: remove this if you want "auto" height */
-    width: 10vw;
-    /* Set the width of the sidebar */
-    position: fixed;
-    /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1;
-    /* Stay on top */
-    top: 0;
-    /* Stay at the top */
-    left: 0;
-    background-color: #0596FF;
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 20px;
+  height: 100%;
+  /* Full-height: remove this if you want "auto" height */
+  width: 10vw;
+  /* Set the width of the sidebar */
+  position: fixed;
+  /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  left: 0;
+  background-color: #0596ff;
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 20px;
 }
 
 /* The navigation menu links */
 .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-    color: #f1f1f1;
+  color: #f1f1f1;
 }
 
 /* Style page content */
 .main {
-    margin-left: 160px;
-    /* Same as the width of the sidebar */
-    padding: 0px 10px;
+  margin-left: 160px;
+  /* Same as the width of the sidebar */
+  padding: 0px 10px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
+  .sidenav {
+    padding-top: 15px;
+  }
 
-    .sidenav a {
-        font-size: 18px;
-    }
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+.logoPrincipal {
+  display: block;
+  margin-left: 1px;
+  margin-right: 1px;
+  width: 110%;
 }
 
 img {
-    display: block;
-    margin-left: 1px;
-    margin-right: 1px;
-    width: 50%;
+  display: block;
+  margin: auto;
+  width: 65%;
+  text-align: center;
+  align-content: center;
 }
 
 .logo {
-    width: 180%;
-    /* margin: auto; */
-    display: block;
+  width: 180%;
+  /* margin: auto; */
+  display: block;
 }
