--- a/TestHero/ClientApp/src/Pages/home/home.css
+++ b/TestHero/ClientApp/src/Pages/home/home.css
@@ -1,35 +1,36 @@
 .home_background {
   background-color: #1d1d1d;
-
-  height: 100vw;
+  height: 100vh;
+  width: 100vw;
 }
 
-.titulo {
+.tituloPagina {
   color: #ebebeb;
   font-style: bold;
-  font-size: 64px;
+  font-size: 40px;
+  margin-bottom: 40px;
+  padding-top: 15px;
   margin-left: 15vw;
   text-align: left;
-  /* font-family: raleway; */
+}
+
+.datos {
+  display: flex;
+  align-items: center;
 }
 
 .icono {
-  width: 14%;
+  width: 10%;
+  min-width: 100px;
   text-align: left;
   margin-left: 15vw;
   margin-right: 4vw;
   float: left;
 }
 
-span {
+.nombreUsuario {
   color: #ebebeb;
-  font-size: 54px;
+  font-size: 35px;
+  font-weight: 500;
 }
-.fondo {
-  margin-top: 200px;
-  width: 84%;
-  border: 2px solid blue;
-  background-color: #1d1d1d;
-  margin-left: 15vw;
-  color: #ebebeb;
-}
+
