--- a/TestHero/ClientApp/src/Pages/login/login.css
+++ b/TestHero/ClientApp/src/Pages/login/login.css
@@ -23,13 +23,18 @@
 
 .loginWrapper {
     z-index: 2;
-    width: 60%;
-    max-width: 650px;
+    width: 70%;
+    max-width: 800px;
     min-width: 300px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
+.loginWrapper img {
+  width: 100%;
+  max-width: 300px;
+}
 
 .loginDesc {
   font-size: 24px;
@@ -37,6 +42,8 @@
 
 .loginBox {
   padding: 25px;
+  width: 100%;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
