--- a/TestHero/ClientApp/src/components/pregunta/Pregunta.css
+++ b/TestHero/ClientApp/src/components/pregunta/Pregunta.css
@@ -1,17 +1,16 @@
 .dropdown {
-    width: 80%;
+    width: 100%;
     height: 100px;
-    margin-top: 15px;
     background-color: #0596ff;
     color: #ebebeb;
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 0px;
+    z-index: 1;
   }
 
-<<<<<<< Updated upstream
 .titulo {
     font-size: 35px;
     font-weight: 500;
@@ -23,28 +22,81 @@
     margin-right: 20px;
 }
 
-.extension{
+.pregIcon:hover{
+    cursor: pointer;
+}
+
+.pregunta {
+    margin-top: 30px;
+    width: 70%;
+    margin-right: 50px;
+}
+
+.extension {
     display: flex;
+    align-items: center;
+    background-color: rgba(5, 150, 255, 0.3);
+    color: #ebebeb;
+    border-radius: 5px;
+    height: 120px;
+    width: 100%;
+}
+
+.showing {
+    animation-name: show;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+    z-index:-5;
+}
+
+.hiding {
+    animation-name: hide;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+    z-index: -5;
+}
+
+@keyframes show {
+    from { height: 0; opacity: 0;}
+    to { height: 120px; opacity: 1;}
+}
+
+@keyframes hide {
+    from { height: 120px; opacity: 1;}
+    to { height: 0px; opacity: 0;}
+}
+
+
+.respuestas{
+    display: flex;
+    justify-content: space-around;
     flex-wrap: wrap;
-    background-color: ;
+    width: 80%;
 }
 
 .respuesta {
+    margin: 10px 0 10px 15px;
+    width: 40%;
 }
-=======
-  .titulo {
-    font-size: 35px;
-    font-weight: 500;
-    margin-left: 20px;
-  }
 
-  .pregIcon{
-    float: right;
-    margin-right: 20px;
-  }
-  
-  .extension{
+
+.respuesta input {
+    display: inline-block;
+}
+
+.respuesta p {
+    margin-left: 10px;
+    font-size: 18px;
+    display: inline-block;
+}
+
+.iconsRespuesta {
+    width: 20%;
+    max-width: 200px;
     display: flex;
-    flex-wrap: wrap;
-  }
->>>>>>> Stashed changes
+    justify-content: space-around;
+}
+
+.crudIcon:hover {
+    cursor:pointer;
+}
