--- a/TestHero/ClientApp/src/components/pregunta/Pregunta.css
+++ b/TestHero/ClientApp/src/components/pregunta/Pregunta.css
@@ -1,102 +1,143 @@
 .dropdown {
-    width: 100%;
-    height: 100px;
-    background-color: #0596ff;
-    color: #ebebeb;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 0px;
-    z-index: 1;
-  }
+  width: 100%;
+  height: 100px;
+  background-color: #0596ff;
+  color: #ebebeb;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0px;
+  z-index: 1;
+}
 
 .titulo {
-    font-size: 35px;
-    font-weight: 500;
-    margin-left: 20px;
+  font-size: 35px;
+  font-weight: 500;
+  margin-left: 20px;
 }
 
-.pregIcon{
-    float: right;
-    margin-right: 20px;
+.pregIcon {
+  float: right;
+  margin-right: 20px;
 }
 
-.pregIcon:hover{
-    cursor: pointer;
+.pregIcon:hover {
+  cursor: pointer;
 }
 
 .pregunta {
-    margin-top: 30px;
-    width: 70%;
-    margin-right: 50px;
+  margin-top: 30px;
+  width: 70%;
+  margin-right: 50px;
 }
 
 .extension {
-    display: flex;
-    align-items: center;
-    background-color: rgba(5, 150, 255, 0.3);
-    color: #ebebeb;
-    border-radius: 5px;
-    height: 120px;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: rgba(5, 150, 255, 0.3);
+  color: #ebebeb;
+  border-radius: 5px;
+  height: 120px;
+  width: 100%;
 }
 
 .showing {
-    animation-name: show;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-out;
-    z-index:-5;
+  animation-name: show;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  z-index: -5;
 }
 
 .hiding {
-    animation-name: hide;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-out;
-    z-index: -5;
+  animation-name: hide;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  z-index: -5;
 }
 
 @keyframes show {
-    from { height: 0; opacity: 0;}
-    to { height: 120px; opacity: 1;}
+  from {
+    height: 0;
+    opacity: 0;
+  }
+  to {
+    height: 120px;
+    opacity: 1;
+  }
 }
 
 @keyframes hide {
-    from { height: 120px; opacity: 1;}
-    to { height: 0px; opacity: 0;}
+  from {
+    height: 120px;
+    opacity: 1;
+  }
+  to {
+    height: 0px;
+    opacity: 0;
+  }
 }
 
-
-.respuestas{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 80%;
+.respuestas {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 80%;
 }
 
 .respuesta {
-    margin: 10px 0 10px 15px;
-    width: 40%;
+  margin: 10px 0 10px 15px;
+  width: 40%;
 }
 
-
 .respuesta input {
-    display: inline-block;
+  display: inline-block;
 }
 
 .respuesta p {
-    margin-left: 10px;
-    font-size: 18px;
-    display: inline-block;
+  margin-left: 10px;
+  font-size: 18px;
+  display: inline-block;
 }
 
 .iconsRespuesta {
-    width: 20%;
-    max-width: 200px;
-    display: flex;
-    justify-content: space-around;
+  width: 20%;
+  max-width: 200px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .crudIcon:hover {
-    cursor:pointer;
+  cursor: pointer;
+}
+
+.modaldetalles {
+  background-color: #0596ff;
+  border: none;
+  text-align: center;
+  color: #ebebeb;
+}
+
+.modal-dialog {
+  margin-top: 200px;
+}
+
+.tamanobody {
+  font-size: 22px;
+}
+
+.botonCancelar {
+  background-color: #0596ff;
+  color: #ebebeb;
+  border-color: #ebebeb;
+  font-size: 24px;
+  float: left;
+}
+
+.botonEliminar {
+  background-color: #ebebeb;
+  color: #fd4d4d;
+  border-color: #ebebeb;
+  font-size: 24px;
+  float: left;
 }
