--- a/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.css
+++ b/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.css
@@ -11,11 +11,26 @@
   z-index: 1;
 }
 
-.titulo {
+.titulopregunta {
   font-size: 35px;
   font-weight: 500;
   margin-left: 20px;
+  background-color: #0596ff;
+  color: #ebebeb;
+  border: none;
+  width: 85%;
 }
+
+.opciones {
+  background-color: rgba(5, 150, 255, 0);
+  box-shadow: none;
+  color: #ebebeb;
+  border: none;
+}
+
+::placeholder {
+  color: #bbbaba;
+} /* WebKit */
 
 .pregIcon {
   float: right;
@@ -40,42 +55,6 @@
   border-radius: 5px;
   height: 120px;
   width: 100%;
-}
-
-.showing {
-  animation-name: show;
-  animation-duration: 1.5s;
-  animation-timing-function: ease-out;
-  z-index: -5;
-}
-
-.hiding {
-  animation-name: hide;
-  animation-duration: 1.5s;
-  animation-timing-function: ease-out;
-  z-index: -5;
-}
-
-@keyframes show {
-  from {
-    height: 0;
-    opacity: 0;
-  }
-  to {
-    height: 120px;
-    opacity: 1;
-  }
-}
-
-@keyframes hide {
-  from {
-    height: 120px;
-    opacity: 1;
-  }
-  to {
-    height: 0px;
-    opacity: 0;
-  }
 }
 
 .respuestas {
@@ -111,34 +90,12 @@
   cursor: pointer;
 }
 
-.modaldetalles {
-  background-color: #0596ff;
-  border: none;
-  text-align: center;
-  color: #ebebeb;
-}
-
-.modal-dialog {
-  margin-top: 200px;
-}
-
-.tamanobody {
-  font-size: 22px;
-}
-
 .botonCancelar {
   background-color: #0596ff;
   color: #ebebeb;
-  border-color: #ebebeb;
+  border: none;
+  padding: 2px 50px;
   font-size: 24px;
   float: left;
-}
-
-.botonEliminar {
   margin-top: 50px;
-  background-color: #ebebeb;
-  color: #fd4d4d;
-  border-color: #ebebeb;
-  font-size: 24px;
-  float: left;
 }
