--- a/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.css
+++ b/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.css
@@ -14,12 +14,13 @@
 }
 
 .form-group {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 label {
   display: block;
-  margin-bottom: 5px;
+  font-size: 20px;
+  margin-bottom: 15px;
 }
 
 input[type="text"],
@@ -31,10 +32,20 @@ textarea {
   border-radius: 5px;
 }
 
-.btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
-  color: #fff;
+.tagDatalist {
+  max-height: 5em;
+  overflow: hidden;
+  position: absolute;
+  border: 0 none;
+  color: green;
+}
+
+.boton {
+  background-color: #0596FF;
+  border-radius: 5px;
+  padding: 10px 40px;
+  border: none;
+  color: #ebebeb;
 }
 
 .custom-form {
