--- a/TestHero/ClientApp/src/Pages/group/group.module.css
+++ b/TestHero/ClientApp/src/Pages/group/group.module.css
@@ -72,3 +72,14 @@
     text-decoration: none;
     color: #ebebeb;
 }
+
+.action-button {
+    background-color: #0596FF;
+    color: #EBEBEB;
+    min-width: 200px;
+    padding: 15px 25px;
+    border-radius: 10px;
+    border: none;
+    font-weight: 500;
+    font-size: 20px;
+}
