--- a/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.css
+++ b/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.css
@@ -1,6 +1,5 @@
 .dropdown {
   width: 100%;
-  height: 100px;
   background-color: #0596ff;
   color: #ebebeb;
   border-radius: 5px;
@@ -8,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0px;
+  padding: 10px;
   z-index: 1;
 }
 
@@ -53,7 +53,7 @@
   background-color: rgba(5, 150, 255, 0.3);
   color: #ebebeb;
   border-radius: 5px;
-  height: 120px;
+  padding: 10px;
   width: 100%;
 }
 
@@ -90,12 +90,29 @@
   cursor: pointer;
 }
 
-.botonCancelar {
-  background-color: #0596ff;
-  color: #ebebeb;
+.boton {
+  background-color: #0596FF;
+  border-radius: 5px;
+  padding: 10px 40px;
   border: none;
-  padding: 2px 50px;
-  font-size: 24px;
-  float: left;
-  margin-top: 50px;
+  color: #ebebeb;
+}
+
+.aviso {
+  color: #ebebeb;
+  font-size: 20px;
+  margin-top: 15px;
+  font-weight: 500;
+}
+
+
+.botonPreguntas {
+  background-color: #0596FF;
+  border-radius: 5px;
+  padding: 15px 40px;
+  border: none;
+  color: #ebebeb;
+  margin-top: 30px;
+  font-size: 20px;
+  margin-bottom: 30px;
 }
