--- a/TestHero/ClientApp/src/components/pregunta/Pregunta.css
+++ b/TestHero/ClientApp/src/components/pregunta/Pregunta.css
@@ -1,6 +1,5 @@
 .dropdown {
   width: 100%;
-  height: 100px;
   background-color: #0596ff;
   color: #ebebeb;
   border-radius: 5px;
@@ -8,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0px;
+  padding: 10px;
   z-index: 1;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .pregunta {
-  margin-top: 30px;
+  margin-top: 50px;
   width: 70%;
   margin-right: 50px;
 }
@@ -38,7 +38,7 @@
   background-color: rgba(5, 150, 255, 0.3);
   color: #ebebeb;
   border-radius: 5px;
-  height: 120px;
+  padding: 10px;
   width: 100%;
 }
 
@@ -58,22 +58,22 @@
 
 @keyframes show {
   from {
-    height: 0;
+    max-height: 0;
     opacity: 0;
   }
   to {
-    height: 120px;
+    max-height: 500px;
     opacity: 1;
   }
 }
 
 @keyframes hide {
   from {
-    height: 120px;
+    max-height: 500px;
     opacity: 1;
   }
   to {
-    height: 0px;
+    max-height: 0px;
     opacity: 0;
   }
 }
@@ -118,6 +118,11 @@
   color: #ebebeb;
 }
 
+.modal-footer{
+  align-items: center;
+  justify-content: space-around;
+}
+
 .modal-dialog {
   margin-top: 200px;
 }
@@ -127,18 +132,22 @@
 }
 
 .botonCancelar {
+  margin-top: 30px;
+  margin-bottom: 40px;
   background-color: #0596ff;
   color: #ebebeb;
+  padding: 10px 20px;
+  border-width: 2px;
   border-color: #ebebeb;
   font-size: 24px;
-  float: left;
 }
 
 .botonEliminar {
-  margin-top: 50px;
+  margin-top: 30px;
+  padding: 10px 20px;
+  margin-bottom: 40px;
   background-color: #ebebeb;
   color: #fd4d4d;
   border-color: #ebebeb;
   font-size: 24px;
-  float: left;
 }
