--- a/TestHero/ClientApp/src/Pages/group/group.module.css
+++ b/TestHero/ClientApp/src/Pages/group/group.module.css
@@ -40,7 +40,6 @@
     list-style: none;
     width: 75%;
     max-width: 800px;
-    padding: 15px;
     margin-bottom: 10px;
     font-size: 20px;
     border: 2px solid #fff;
@@ -48,26 +47,34 @@
     font-weight: bold;
 }
 
-.exam-list-item:nth-child(1) {
+.border-color-0 {
     border-color: #0596FF;
 }
 
-.exam-list-item:nth-child(2) {
+.border-color-0:hover {
+    background-color: #0596FF;
+}
+
+.border-color-1 {
     border-color: #00A39B;
 }
 
-.exam-list-item:nth-child(3) {
-    border-color: #A375FF;;
+.border-color-1:hover {
+    background-color: #00A39B;
 }
 
-.exam-list-item:nth-child(4) {
-    border-color: #0596FF;
+.border-color-2 {
+    border-color: #A375FF;
+}
+
+.border-color-2:hover {
+    background-color: #A375FF;
 }
 
 .exam-list-item a {
     width: 100%;
     height: 100%;
-    padding: 10px 14px;
+    padding: 24px 14px;
     display: flex;
     text-decoration: none;
     color: #ebebeb;
