--- a/TestHero/ClientApp/src/Pages/grupos/grupos.module.css
+++ b/TestHero/ClientApp/src/Pages/grupos/grupos.module.css
@@ -88,3 +88,49 @@
   font-weight: 500;
   font-size: 20px;
 }
+
+.titulogrupo {
+  font-size: 65px;
+  font-weight: 800;
+  margin-left: -10px;
+  background-color: #ebebeb;
+  color: #1d1d1d;
+  border: none;
+  width: 85%;
+}
+
+.modal {
+  background-color: #1d1d1d;
+}
+
+.modaldetalles2 {
+  background-color: #1d1d1d;
+  border: none;
+  text-align: center;
+  color: #ebebeb;
+}
+
+.modal-footer {
+  align-items: center;
+  justify-content: space-around;
+}
+
+.modal-dialog {
+  margin-top: 200px;
+}
+
+.tamanobody2 {
+  font-size: 22px;
+}
+
+.botonCrear {
+  margin-top: 15px;
+  padding: 10px 20px;
+  margin-left: 300px;
+  margin-bottom: 20px;
+  text-align: end;
+  background-color: #ebebeb;
+  color: #0596ff;
+  border-color: #ebebeb;
+  font-size: 24px;
+}
