--- a/TestHero/ClientApp/src/Pages/grupos/grupos.module.css
+++ b/TestHero/ClientApp/src/Pages/grupos/grupos.module.css
@@ -12,9 +12,10 @@
 }
 
 /* SEARCH BAR */
-.search-bar {
+.search-bar2 {
   height: 38px;
-  padding: 0 14px;
+  padding: 0 3px;
+  width: 50px;
   border: none;
   border-radius: 6px;
 }
@@ -133,4 +134,8 @@
   color: #0596ff;
   border-color: #ebebeb;
   font-size: 24px;
+}
+
+.margen {
+  margin-right: 800px;
 }
