--- a/TestHero/ClientApp/src/components/selectable-navbar/selectable-navbar.module.css
+++ b/TestHero/ClientApp/src/components/selectable-navbar/selectable-navbar.module.css
@@ -1,37 +1,37 @@
 .container,
 .list {
-    display: flex;
+  display: flex;
 }
 
 .container,
 .aux-container {
-    width: 100%;
-    background-color: #1D1D1D;
+  width: 100%;
+  background-color: #1d1d1d;
 }
 
 .aux-container,
 .item-container {
-    border-bottom: 2.5px solid #0596FF;
+  border-bottom: 2.5px solid #0596ff;
 }
 
 .item-container {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .item-container button {
-    border: none;
-    opacity: 0.5;
-    color: #EBEBEB;
-    font-size: x-large;
-    font-weight: 500;
-    padding: 10px 18px;
+  border: none;
+  opacity: 0.5;
+  color: #1d1d1d;
+  font-size: x-large;
+  font-weight: 500;
+  padding: 10px 18px;
 }
 
 .item-container.active-item button {
-    opacity: 1;
+  opacity: 1;
 }
 
 .active-item {
-    color: white;
-    border-bottom: 2.5px solid #EBEBEB;
+  color: white;
+  border-bottom: 2.5px solid #ebebeb;
 }
