--- a/TestHero/ClientApp/src/Pages/questions/questions.css
+++ b/TestHero/ClientApp/src/Pages/questions/questions.css
@@ -71,3 +71,9 @@ body {
   margin-bottom: 50px;
   margin-right: 8vw;
 }
+
+.vacio {
+  color: #ebebeb;
+  font-size: 34px;
+  text-align: center;
+}
