--- a/TestHero/ClientApp/src/components/selectable-navbar/selectable-navbar.module.css
+++ b/TestHero/ClientApp/src/components/selectable-navbar/selectable-navbar.module.css
@@ -1,17 +1,26 @@
 .container,
 .list {
-  display: flex;
+    display: flex;
+    margin-bottom: 0;
+}
+
+.container {
+    border-bottom: 2.5px solid #0596ff;
+    padding:0;
+    list-style-type:none;
 }
 
 .container,
 .aux-container {
-  width: 100%;
-  background-color: #1d1d1d;
+    margin-left: 10%;
+    background-color: #1d1d1d;
+    margin-bottom: auto;
 }
 
 .aux-container,
 .item-container {
-  border-bottom: 2.5px solid #0596ff;
+    border-bottom: 1px ridge #0596ff;
+    list-style-type: none;
 }
 
 .item-container {
@@ -33,5 +42,5 @@
 
 .active-item {
   color: white;
-  border-bottom: 2.5px solid #ebebeb;
+  border-bottom: 1.5px solid #ebebeb;
 }
