--- a/TestHero/ClientApp/src/Pages/loginalumno/loginalumno.css
+++ b/TestHero/ClientApp/src/Pages/loginalumno/loginalumno.css
@@ -1,104 +1,112 @@
 .login {
-  width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: black;
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
 }
 
-.login::before {
-  content: "";
-  background-image: url("../..//assets/fondo.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  opacity: 0.4;
-  z-index: 1;
-}
+    .login::before {
+        content: "";
+        background-image: url("../..//assets/fondo.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: 0.4;
+        z-index: 1;
+    }
 
 .loginWrapper {
-  z-index: 2;
-  width: 70%;
-  max-width: 800px;
-  min-width: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    z-index: 2;
+    width: 70%;
+    max-width: 800px;
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.loginWrapper img {
-  width: 100%;
-  max-width: 300px;
-}
+    .loginWrapper img {
+        width: 100%;
+        max-width: 300px;
+    }
 
 .loginDesc {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 .loginBox {
-  padding: 25px;
-  width: 100%;
-  max-width: 500px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    padding: 25px;
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .loginInput {
-  height: 50px;
-  border-radius: 10px;
-  border: 1px solid black;
-  font-size: 18px;
-  padding-left: 20px;
-  padding: 10px;
+    height: 50px;
+    border-radius: 10px;
+    border: 1px solid black;
+    font-size: 18px;
+    padding-left: 20px;
+    padding: 10px;
 }
 
-.loginInput:focus {
-  outline: none;
-}
+    .loginInput:focus {
+        outline: none;
+    }
 
 .loginButton {
-  margin-top: 20px;
-  height: 60px;
-  border: none;
-  background-color: #0596ff;
-  color: white;
-  font-size: 20px;
-  font-weight: 500;
-  border-radius: 10px;
-  padding: 10px;
+    margin-top: 20px;
+    height: 60px;
+    border: none;
+    background-color: #0596ff;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 10px;
+    padding: 10px;
 }
 
-.loginButton:hover {
-  cursor: pointer;
-}
+    .loginButton:hover {
+        cursor: pointer;
+    }
 
-.loginButton:focus {
-  outline: none;
-}
+    .loginButton:focus {
+        outline: none;
+    }
 
-.loginButton:disabled {
-  cursor: not-allowed;
-}
+    .loginButton:disabled {
+        cursor: not-allowed;
+    }
+
 .loginForgot {
-  text-align: center;
-  color: rgb(156, 109, 148);
+    text-align: center;
+    color: rgb(156, 109, 148);
 }
 
 .texto {
-  font-size: 25px;
-  font-weight: bold;
-  color: #f0f2f5;
+    font-size: 25px;
+    font-weight: bold;
+    color: #f0f2f5;
 }
 
 .textoError {
-  font-size: 20px;
-  font-weight: bold;
-  color: #fd4d4d;
-  margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fd4d4d;
+    margin-top: 20px;
+}
+
+.BackArrow {
+    position: absolute;
+    top: 1.8vw;
+    left: 2.8vw;
+    width: 6vw !important;
 }
