--- a/TestHero/ClientApp/src/components/sidebarAlumno/SidebarAlumno.css
+++ b/TestHero/ClientApp/src/components/sidebarAlumno/SidebarAlumno.css
@@ -13,51 +13,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
-    text-decoration: none;
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 40px;
-  }
-  
-  .sidenav a:hover {
-    cursor: pointer;
-  }
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {
-      padding-top: 15px;
-    }
-  
+}
+
+    /* The navigation menu links */
     .sidenav a {
-      font-size: 18px;
+        text-decoration: none;
+        width: 60%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 40px;
     }
-  }
-  
-  .logoPrincipal {
+
+        .sidenav a:hover {
+            cursor: pointer;
+        }
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+        .sidenav a {
+            font-size: 18px;
+        }
+}
+
+.logoPrincipal {
     display: block;
     margin-left: 1px;
     margin-right: 1px;
     margin-bottom: 40px;
-    width: 60%;
-  }
-  
-  .iconSidebar {
-    width: 100%;
-  }
-  
-  @media screen and (max-height: 450px) {
+    width: 60% !important;
+}
+
+.iconSidebar {
+    width: 88% !important;
+}
+
+@media screen and (max-height: 450px) {
     .sidenav {
-      padding-top: 15px;
+        padding-top: 15px;
     }
-  
-    .sidenav a {
-      font-size: 18px;
-    }
-  }
-  
+
+        .sidenav a {
+            font-size: 18px;
+        }
+}
