Se corrigieron bus en el componente pregunta
- Los menús desplegables se trababan
-  Al actualizar la pregunta el formulario no requería que llenaras todos los campos
- A veces aparecían las preguntas sin respuesta seleccionada
- A veces desaparecían las respuestas de las preguntas

--- a/TestHero/ClientApp/src/Pages/examenes/examenes.module.css
+++ b/TestHero/ClientApp/src/Pages/examenes/examenes.module.css
@@ -15,7 +15,7 @@
   .search-bar2 {
     height: 38px;
     padding: 0 3px;
-    width: 50px;
+    max-width: 500px;
     border: none;
     border-radius: 6px;
   }
