--- a/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.css
+++ b/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.css
@@ -17,19 +17,22 @@
   margin-bottom: 40px;
 }
 
-label {
+.label {
   display: block;
   font-size: 20px;
   margin-bottom: 15px;
 }
 
-input[type="text"],
-textarea {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+.input[type="text"],
+.textarea {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    margin-left: 800px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 .tagDatalist {
