--- a/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.css
+++ b/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.css
@@ -25,14 +25,14 @@
 
 .input[type="text"],
 .textarea {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    margin-left: 800px;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 800px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .tagDatalist {
@@ -44,7 +44,7 @@
 }
 
 .botonPreguntas {
-  background-color: #0596FF;
+  background-color: #0596ff;
   border-radius: 5px;
   padding: 15px 40px;
   border: none;
@@ -80,3 +80,7 @@
   margin-right: 10px;
 }
 
+.tagInput {
+  width: 85%;
+  margin-top: 10px;
+}
