--- a/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.css
+++ b/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.css
@@ -91,7 +91,7 @@
 }
 
 .boton {
-  background-color: #0596FF;
+  background-color: #0596ff;
   border-radius: 5px;
   padding: 10px 40px;
   border: none;
@@ -105,14 +105,24 @@
   font-weight: 500;
 }
 
-
 .botonPreguntas {
-  background-color: #0596FF;
+  background-color: #0596ff;
   border-radius: 5px;
   padding: 15px 40px;
   border: none;
   color: #ebebeb;
   margin-top: 30px;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.botonCancelarPregunta {
+  background-color: #ebebeb;
+  border-radius: 5px;
+  padding: 15px 40px;
+  color: #0596ff;
+  margin-top: 28px;
+  margin-right: 335px;
   font-size: 20px;
   margin-bottom: 30px;
 }
