--- a/TestHero/ClientApp/src/components/pregunta/Pregunta.css
+++ b/TestHero/ClientApp/src/components/pregunta/Pregunta.css
@@ -167,3 +167,13 @@
   border: none;
   width: 85%;
 }
+.botonCancelarPreguntaEditar {
+  background-color: #ebebeb;
+  border-radius: 5px;
+  padding: 15px 40px;
+  color: #0596ff;
+  margin-top: 28px;
+  margin-right: 312px;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
