--- a/TestHero/ClientApp/src/Pages/Invitacion/invitacion.module.css
+++ b/TestHero/ClientApp/src/Pages/Invitacion/invitacion.module.css
@@ -54,11 +54,28 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 400px;
     height: 50px;
+    margin: 0 auto;
     color: #fff;
     border-radius: 5px;
     padding: 15px 40px;
     border: none;
     font-weight: 600;
     margin-bottom: 30px;
+    box-shadow: 7px 7px rgba(0px, 0px, 0px, 0.24);
+}
+
+.submit-btn:hover {
+    background-color: #046db8;;
+    transform: scale(0.98);
+    box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
+}
+
+.btn-link {
+    color: white;
+}
+
+.btn-link:hover{
+    color: white;
 }
