--- a/TestHero/ClientApp/src/Pages/login/login.module.css
+++ b/TestHero/ClientApp/src/Pages/login/login.module.css
@@ -62,33 +62,33 @@
         outline: none;
     }
 
-.ButtonDouble {
+.loginButton {
     margin-top: 20px;
-    height: 80px;
+    height: 60px;
     border: none;
     background-color: #0596ff;
     color: white;
     font-size: 20px;
     font-weight: 500;
     border-radius: 10px;
+    box-shadow: 7px 7px rgba(0px, 0px, 0px, 0.24);
     padding: 10px;
-    width: 220px;
-    text-decoration: none !important;
 }
 
-    .ButtonDouble:hover {
+    .loginButton:hover {
         cursor: pointer;
-        text-decoration: none !important;
+        background-color: #046db8;
+        transform: scale(0.98);
+        box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
     }
 
-    .ButtonDouble:focus {
+    .loginButton:focus {
         outline: none;
-        text-decoration: none;
     }
 
-.loginButton:disabled {
-    cursor: not-allowed;
-}
+    .loginButton:disabled {
+        cursor: not-allowed;
+    }
 
 .loginForgot {
     text-align: center;
@@ -104,20 +104,17 @@
 .textoError {
     font-size: 20px;
     font-weight: bold;
-    color: #fd4d4d;
+    color: #FD4D4D;
     margin-top: 20px;
 }
 
-.estiloCentro {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+.BackArrow {
+    position: absolute;
+    top: 1.8vw;
+    left: 2.8vw;
+    width: 6vw !important;
 }
 
-a:hover{
-    text-decoration:none;
-}
-a{
-    text-decoration:none;
+.BackArrow:hover {
+    cursor: pointer;
 }
