Modified css in group

--- a/TestHero/ClientApp/src/Pages/preguntasAlumno/preguntasAlumno.css
+++ b/TestHero/ClientApp/src/Pages/preguntasAlumno/preguntasAlumno.css
@@ -40,7 +40,7 @@
     padding: 8px 16px;
     font-size: 16px;
     background-color: #0596ff;
-    color: white;
+    color: #ebebeb;
     border: none;
     border-radius: 4px;
     cursor: pointer;
