--- a/TestHero/ClientApp/src/Pages/Invitacion/invitacion.module.css
+++ b/TestHero/ClientApp/src/Pages/Invitacion/invitacion.module.css
@@ -2,7 +2,7 @@
 .outer-container {
     position: fixed;
     width: 100dvw;
-    color: #fff;
+    color: #1d1d1d;
     font-size: 20px;
     font-weight: 500;
     user-select: none;
@@ -57,7 +57,7 @@
     width: 400px;
     height: 50px;
     margin: 0 auto;
-    color: #fff;
+    color: #1d1d1d;
     border-radius: 5px;
     padding: 15px 40px;
     border: none;
@@ -73,9 +73,9 @@
 }
 
 .btn-link {
-    color: white;
+    color: #ebebeb;
 }
 
 .btn-link:hover{
-    color: white;
+    color: #ebebeb;
 }
