--- a/TestHero/ClientApp/src/Pages/examenesAlumno/examenes.module.css
+++ b/TestHero/ClientApp/src/Pages/examenesAlumno/examenes.module.css
@@ -42,7 +42,7 @@
   max-width: 800px;
   margin-bottom: 10px;
   font-size: 20px;
-  border: 2px solid #fff;
+  border: 2px solid #1d1d1d;
   border-radius: 4px;
   font-weight: bold;
 }
