--- a/TestHero/ClientApp/src/Pages/prelogin/prelogin.module.css
+++ b/TestHero/ClientApp/src/Pages/prelogin/prelogin.module.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: #1d1d1d;
 }
 
     .login::before {
@@ -52,7 +52,7 @@
 .loginInput {
     height: 50px;
     border-radius: 10px;
-    border: 1px solid black;
+    border: 1px solid #1d1d1d;
     font-size: 18px;
     padding-left: 20px;
     padding: 10px;
@@ -67,7 +67,7 @@
     height: 80px;
     border: none;
     background-color: #0596ff;
-    color: white;
+    color: #ebebeb;
     font-size: 20px;
     font-weight: 500;
     border-radius: 10px;
