--- a/TestHero/ClientApp/src/Pages/resumenExamen/resumenexamen.module.css
+++ b/TestHero/ClientApp/src/Pages/resumenExamen/resumenexamen.module.css
@@ -40,7 +40,7 @@
       padding: 8px 16px;
       font-size: 16px;
       background-color: #0596ff;
-      color: white;
+      color: #ebebeb;
       border: none;
       border-radius: 4px;
       cursor: pointer;
@@ -52,7 +52,7 @@
       }
   
 .subtitle{
-    color: white;
+    color: #ebebeb;
     margin-top: 30px;
     margin-bottom: 30px;
 }
