--- a/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.module.css
+++ b/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.module.css
@@ -149,4 +149,13 @@
   margin-right: 335px;
   font-size: 20px;
   margin-bottom: 30px;
+  box-shadow: 7px 7px rgba(0px, 0px, 0px, 0.24);
+}
+
+.botonCancelarPregunta:hover{
+  cursor: pointer;
+  background-color: #d0d0d0;
+  color: #0596ff;
+  transform: scale(0.98);
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
 }
