--- a/TestHero/ClientApp/src/components/pregunta/pregunta.module.css
+++ b/TestHero/ClientApp/src/components/pregunta/pregunta.module.css
@@ -142,6 +142,13 @@
   border-width: 2px;
   border-color: #ebebeb;
   font-size: 24px;
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
+}
+
+.botonCancelar2:hover{
+  transform: scale(0.98);
+  background-color: #464545;
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
 }
 
 .botonEliminar {
@@ -152,6 +159,14 @@
   color: #fd4d4d;
   border-color: #ebebeb;
   font-size: 24px;
+}
+
+.botonEliminar:hover{
+  cursor: pointer;
+  background-color: #d0d0d0;
+  color: #fd4d4d;
+  transform: scale(0.98);
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
 }
 
 .inputpregunta {
@@ -209,4 +224,14 @@
   margin-right: 312px;
   font-size: 20px;
   margin-bottom: 30px;
+  box-shadow: 7px 7px rgba(0px, 0px, 0px, 0.24);
 }
+
+.botonCancelarPreguntaEditar:hover{
+  cursor: pointer;
+  background-color: #d0d0d0;
+  color: #0596ff;
+  transform: scale(0.98);
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
+}
+
