--- a/TestHero/ClientApp/src/custom.css
+++ b/TestHero/ClientApp/src/custom.css
@@ -1,4 +1,4 @@
-/* Provide sufficient contrast against white background */
+/* Provide sufficient contrast against #ebebeb background */
 a {
   color: #0366d6;
 }
@@ -8,7 +8,7 @@ code {
 }
 
 .btn-primary {
-  color: #fff;
+  color: #1d1d1d;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
