--- a/TestHero/ClientApp/src/Pages/grupos/grupos.module.css
+++ b/TestHero/ClientApp/src/Pages/grupos/grupos.module.css
@@ -176,3 +176,9 @@ button.btn-close .btn-close.modal-header, .btn-close {
   transform: scale(0.98);
   box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
 }
+
+.vacio {
+  color: #ebebeb;
+  font-size: 34px;
+  text-align: center;
+}
