--- a/TestHero/ClientApp/src/Pages/homeAlumno/homealumno.module.css
+++ b/TestHero/ClientApp/src/Pages/homeAlumno/homealumno.module.css
@@ -30,7 +30,8 @@
 
 .icono {
   width: 10%;
-  min-width: 100px;
+  min-width: 70px;
+  max-width: 120px;
   text-align: left;
   margin-left: 15vw;
   margin-right: 4vw;
@@ -46,4 +47,10 @@
 .datosAlumno {
   display: flex;
   flex-direction: column;
+}
+
+.vacio {
+  color: #ebebeb;
+  font-size: 34px;
+  text-align: center;
 }
