--- a/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.module.css
+++ b/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.module.css
@@ -152,10 +152,50 @@
   box-shadow: 7px 7px rgba(0px, 0px, 0px, 0.24);
 }
 
-.botonCancelarPregunta:hover{
+.botonCancelarPregunta:hover {
   cursor: pointer;
   background-color: #d0d0d0;
   color: #0596ff;
   transform: scale(0.98);
   box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
+}
+
+.dropdown2 {
+  width: 500px;
+  margin: 40 10;
+  position: relative;
+  user-select: none;
+}
+
+.dropdown2 .dropdown2-btn {
+  padding: 10px;
+  background: #ebebeb;
+  box-shadow: 3px 3px 5px 10px rgba(0, 0, 0, 0.06);
+  font-weight: bold;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.dropdown2 .dropdown2-content {
+  position: absolute;
+  top: 110%;
+  padding: 10px;
+  background: #ebebeb;
+  box-shadow: 3px 3px 5px 10px rgba(0, 0, 0, 0.06);
+  font-weight: 500;
+  color: #333;
+  left: 0;
+  width: 105%;
+}
+
+.dropdown2 .dropdown2-content .dropdown2-item {
+  padding: 10px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.dropdown2 .dropdown2-content .dropdown2-item:hover {
+  background: #f4f4f4;
 }
