Dropdown y color rojo

--- a/TestHero/ClientApp/src/Pages/RegistroAlumnos/registroAlumnos.module.css
+++ b/TestHero/ClientApp/src/Pages/RegistroAlumnos/registroAlumnos.module.css
@@ -119,8 +119,7 @@
   cursor: pointer;
 }
 .errorMessage {
-  color: white;
-  background-color: red;
+  color: #fd4d4d;
   font-size: 23px;
   text-align: center;
 }
