--- a/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.module.css
+++ b/TestHero/ClientApp/src/components/formularioPregunta/formularioPregunta.module.css
@@ -162,7 +162,9 @@
 
 .dropdown2 {
   width: 500px;
-  margin: 40 10;
+  margin-left: -30px;
+  margin-right: 340px;
+  margin-top: 10px;
   position: relative;
   user-select: none;
 }
