--- a/TestHero/ClientApp/src/components/pregunta/pregunta.module.css
+++ b/TestHero/ClientApp/src/components/pregunta/pregunta.module.css
@@ -246,11 +246,27 @@
 }
 .dropdown2 {
   width: 500px;
-
   margin-left: 50px;
   margin-top: -20px;
   position: relative;
   user-select: none;
+}
+.extension2 {
+  display: flex;
+  align-items: center;
+  background-color: #ebebeb;
+  width: 500px;
+  margin-left: 50px;
+  margin-top: -20px;
+  padding: 10px;
+  background: #ebebeb;
+  box-shadow: 3px 3px 5px 10px rgba(0, 0, 0, 0.06);
+  font-weight: bold;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
 }
 
 .dropdown2 .dropdown2-btn {
@@ -284,4 +300,18 @@
 }
 .dropdown2 .dropdown2-content .dropdown2-item:hover {
   background: #f4f4f4;
+}
+
+.showing2 {
+  animation-name: show;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  z-index: -5;
+}
+
+.hiding2 {
+  animation-name: hide;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  z-index: -5;
 }
